# LaserControl

./: CMakeLists.txt  README.md  RESILIENCE_IMPROVEMENTS.md  RESILIENCY_ANALYSIS.md  config_p1.json  config_p2.json  config_p3.json
.github/: copilot-instructions.md
apps/: CMakeLists.txt  calibrate_attenuator.cpp  calibration_p3.json  serial_manager.cpp
examples/: gpiomon.cpp  resilience_demo.cc  serial_manager.cpp  test_all_devices.cc  test_laser.cc  test_powermeter.cc  test_string_formatting.cc
i2c_deprecated/: AD5339.cpp
include/: AD5339.h  Attenuator.hh  AttenuatorSim.hh  Device.hh  Laser.hh  LaserSim.hh  PowerMeter.hh  PowerMeterSim.hh  mem_utils.h  nfb_versaclock_registers.h  utilities.hh
include/asio_serial/: serial.hpp
src/: Attenuator.cpp  AttenuatorSim.cpp  Device.cpp  Laser.cpp  LaserSim.cpp  PowerMeter.cpp  PowerMeterSim.cpp  asio_serial.cpp  control_server.cpp  mem_utils.cpp  probe_ports.cc  test_AD5339.cpp  utilities.cpp
src/impl/list_ports/: list_ports_linux.cc  list_ports_osx.cc  list_ports_win.cc
tests/: CMakeLists.txt  test_device_protocols.cpp  test_response_resilience.cpp  test_utilities.cpp
